refactor: Remove deprecated CandidateDto builder